examples/test/testpolicy10118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10118
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key14: value17
      key21: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value48
          key45: value33
          key19: value15
      podSelector:
        matchLabels:
          key43: value1
